--- a/config/content.htm
+++ b/config/content.htm
@@ -2,8 +2,8 @@
 <h4>倉儲:<a href="https://github.com/40823212/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
 <p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
-<p>12345678910</p>
-<h1>筆記</h1>
+<p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、40823231、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
+<p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p><h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
