--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -72,7 +72,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/kxmn_N9FlcU" width="560"></iframe></p>
 <h2>W5 BG2 主題</h2>
 <p>蒸汽火車</p>
-<p>1.滑環</p>
+<p>1.滑環      2.區拐銷    3.<span>半徑桿</span></p>
+<p>4.<span>合併桿   </span>5.<span>十字頭    6.活塞閥  7.汽缸</span></p>
 <p><img alt="" height="270" src="/images/STEAM TRAIN.gif" width="597"/></p>
 <p></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
