--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6 bg2 零件.html'>w6 bg2 零件</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
+    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
 <h4>倉儲:<a href="https://github.com/40823212/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
 <p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
 <p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、40823231、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
-<p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
+<br />First << <a href='First.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
