--- a/content/w6~w7 bg2 零件.html
+++ b/content/w6~w7 bg2 零件.html
@@ -154,7 +154,12 @@ img.add_border {
 <p><img alt="" height="182" src="./../images/螢幕擷取畫面 2021-04-19 221528.png" width="500"/></p>
 <p><a href="./../downloads/上活塞.STL">零件10:上活塞</a></p>
 <p><img alt="" height="186" src="./../images/螢幕擷取畫面 2021-04-19 221915.png" width="500"/></p>
-<p></p><br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
+<p><a href="./../downloads/上活塞連接桿.STL">零件11:上活塞連接桿</a></p>
+<p><img alt="" height="186" src="./../images/螢幕擷取畫面 2021-04-19 221756.png" width="500"/></p>
+<p><a href="./../downloads/下活塞.STL">零件12:下活塞</a></p>
+<p><img alt="" height="188" src="./../images/螢幕擷取畫面 2021-04-19 221656.png" width="500"/></p>
+<p><a href="./../downloads/輪軸.STL">零件13:輪軸</a></p>
+<p><img alt="" height="187" src="./../images/螢幕擷取畫面 2021-04-19 222049.png" width="500"/></p><br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
