--- a/content/w8~w9 模擬.html
+++ b/content/w8~w9 模擬.html
@@ -133,13 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work<br /><h1>筆記</h1>
-<p>github更動導致檔案push不上去</p>
-<p><img alt="" height="128" src="./../images/10.png" width="1027"/></p>
-<p><img alt="" height="207" src="./../images/11.png" width="607"/></p>
-<p><span>在小黑窗打gitpull將遠端和近端整合</span></p>
-<p><span><img alt="" height="392" src="./../images/12.png" width="680"/></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work</div>
+    <div id="tipue_search_content">w6~w7 bg2 零件 << <a href='w6~w7 bg2 零件.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w8~w9 模擬</h1>
+<p>solidwork</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/X-RIa_wT8jE" title="YouTube video player" width="560"></iframe></p>
+<p>CoppeliaSim</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p><br />w6~w7 bg2 零件 << <a href='w6~w7 bg2 零件.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
