--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,7 +6,9 @@
 <p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
 <p></p>
 <p>八人小組:</p>
-<p><a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、<a href="https://github.com/40823202/cd2021">40823202</a>、<a href="https://github.com/40823203/cd2021">40823203</a>、<a href="https://github.com/40823244/cd2021">40823244</a>、<a href="https://github.com/40823222/cd2021">40823222</a></span></p><h1>筆記</h1>
+<p><a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、<a href="https://github.com/40823202/cd2021">40823202</a>、<a href="https://github.com/40823203/cd2021">40823203</a>、<a href="https://github.com/40823244/cd2021">40823244</a>、<a href="https://github.com/40823222/cd2021">40823222</a></span></p>
+<p><span><strong>八人小組倉儲:<a href="https://40823236.github.io/stage3-bg3/content/index.html">https://40823236.github.io/stage3-bg3/content/index.html</a></strong></span></p>
+<h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
@@ -147,8 +149,7 @@
 <p>下活塞連接桿(縮短下活塞連接桿尺寸以配合前輪與下活塞運動)</p>
 <p><img alt="" height="319" src="/images/下活塞連接桿0521.png" width="500"/></p>
 <p></p>
-<p></p>
-<p></p>
+<h2>task1</h2>
 <p></p>
 <h2>w13 火車改版-3</h2>
 <p><a href="/downloads/鐵軌.STL">新增鐵軌</a></p>
@@ -170,7 +171,8 @@
 <p><img alt="" height="328" src="/images/0605-3.png" width="500"/></p>
 <p><img alt="" height="332" src="/images/0605-4.png" width="500"/></p>
 <h2>w17</h2>
-<p></p><h2>w18</h2>
+<p></p>
+<h2>w18</h2>
 <h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
