--- a/content/w16_exam.html
+++ b/content/w16_exam.html
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 討論主題 << <a href='w1 討論主題.html'>Previous</a> <br /><h1>w2 零件繪製討論</h1>
-<p><img alt="" height="603" src="./../images/w2.png" width="954"/></p>
-<p></p><br />w1 討論主題 << <a href='w1 討論主題.html'>Previous</a> </div>
+    <div id="tipue_search_content">w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16_exam</h1>
+<p>1.<a href="/get_page/w16_exam/:https:/cad.onshape.com/documents/988e316b35b1b3e793e43d6e/w/a96c7f48b2dae15a69f2e903/e/a69ba6b9d1fe5b5919271f53">onshape檔</a></p>
+<p><a href="./../downloads/40823212-.stl">onshape.stl</a></p>
+<p></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
