--- a/content/w16_exam.html
+++ b/content/w16_exam.html
@@ -141,7 +141,12 @@ img.add_border {
 <p>建立 CoppeliaSim 4.1.0 MTB robot 場景</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GrWUUiJEEw0" title="YouTube video player" width="560"></iframe></p>
 <p>手臂末端加入 components-gripper-suction pad 吸盤</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Q2BkuZu6NoU" title="YouTube video player" width="560"></iframe></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Q2BkuZu6NoU" title="YouTube video player" width="560"></iframe></p>
+<p>鍵盤控制影片</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Fl9I07R56FQ" title="YouTube video player" width="560"></iframe></p>
+<p>A=控制joint1逆時鐘，D=控制joint1順時鐘<br/> 左鍵=控制joint2逆時鐘，右鍵=控制joint2順時鐘<br/> S=jointz向下並控制吸盤作動，W=jointz向上<br/> 空白鍵:吸盤停止吸力</p>
+<p></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
