--- a/content/w16_exam.html
+++ b/content/w16_exam.html
@@ -142,6 +142,9 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GrWUUiJEEw0" title="YouTube video player" width="560"></iframe></p>
 <p>手臂末端加入 components-gripper-suction pad 吸盤</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Q2BkuZu6NoU" title="YouTube video player" width="560"></iframe></p>
+<p>迴圈控制影片</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Ea7MppWkdMA" title="YouTube video player" width="560"></iframe></p>
 <p>鍵盤控制影片</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Fl9I07R56FQ" title="YouTube video player" width="560"></iframe></p>
